Fix overflow issue when too many selected elements

--- a/PHASE_2/APPLICATION_SourceCode/stage_2_web_application_final/src/routes/VaccineFinder/VaccineFinder.css
+++ b/PHASE_2/APPLICATION_SourceCode/stage_2_web_application_final/src/routes/VaccineFinder/VaccineFinder.css
@@ -98,6 +98,10 @@
     outline: none;
 }
 
+.multiselect .dropdown-container {
+    overflow: hidden;
+}
+
 .multiselect .dropdown-container .dropdown-heading .dropdown-heading-value {
     overflow: initial;
 }
